# muso

./: .gitignore  README.md  pyproject.toml
muso/: __init__.py  __main__.py  cli.py  helper.py  settings.py  utils.py
musoapp/: __init__.py  __main__.py  cli.py  helper.py  settings.py
musocapp/: __init__.py  __main__.py  cli.py  helper.py  settings.py
tests/: test_muso.py
