[tool.poetry]
name = "muso"
version = "0.3.0"
description = "Muso CLI project"
authors = ["AD0791 <alexdisla1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.0"}
rich = {extras = ["all"], version = "^11.2.0"}
pydantic = {extras = ["all"], version = "^1.9.0"}
pandas = "^1.4.1"
cachetools = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
